Fix firefox horizontal scrolling issue

--- a/bin/css/nanoscroller.less
+++ b/bin/css/nanoscroller.less
@@ -12,6 +12,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  overflow: -moz-hidden-unscrollable;
   .@{contentClass} {
   position: absolute;
   overflow: scroll;
